deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arch-repo-service
  namespace: arch-repo
  labels:
    app.kubernetes.io/name: arch-repo-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: arch-repo-server
  ports:
  - port: 80
    targetPort: 8080
    name: http
    protocol: TCP
